      stdout and stderr.
    + [NT] Add safe_qx sub for replacing qx() that supports
      most of the features of spawn().
  * lib/Lintian/Path.pm:
    + [NT] Add support for fetching and (where it makes sense)
      opening the underlying file system object.  It also adds
      a few minor safety guards to common issues with symlinks.
      (Closes: #698930)

  * reporting/*:
    + [NT] Avoid forking a shell when invoking commands.  This
      has the side effect of allowing some paths from the
      configuration to contain spaces (among other), where it
      previously would not work.

 -- Niels Thykier <niels@thykier.net>  Sun, 14 Sep 2014 08:55:45 +0200

lintian (2.5.27) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - bad-exception-format-in-dep5-copyright
      - changed-by-address-is-root-user
      - exclusive-runtime-tests-field
      - maintainer-address-is-root-user
      - source-contains-prebuilt-doxygen-documentation
      - uploader-address-is-root-user
      - useless-autogenerated-doxygen-file

  * checks/cruft.pm:
    + [BR] Fix a few false positives is for javascript source-is-missing.
    + [BR] Detect prebuilt doxygen documentation.
  * checks/fields.pm:
    + [JW] Fix incorrectly anchored regexps.  (Closes: #760987)
  * checks/files.pm:
    + [BR] Detect useless doxygen generated file.  (Closes:  #751945)
  * checks/manpages.desc:
    + [BR] Improve documentation of manpage-has-errors-from-man.
      (Closes: #757068).
  * checks/menu-format.pm:
    + [BR] Fix a false positive in desktop-mime-but-no-exec-code.
      (Closes: #760677).
  * checks/source-copyright.pm:
    + [BR] Fix false positive for space-in-std-shortname-in-dep5-copyright
      with alternative licenses.  (Closes: #760642).
    + [BR] Fix false positive for with exception syntax.
    + [BR] Fix false positive of 
      wildcard-matches-nothing-in-dep5-copyright.  (Closes: 761125)
  * checks/testsuite.{desc,pm}: